Rename the "lib" directory "dist".

--- a/example/index.html
+++ b/example/index.html
@@ -25,7 +25,7 @@
       <button data-action="destroy" data-type="categories" data-id="2">Delete Category</button>
     </div>
     <script type="text/javascript" charset="utf-8" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script type="text/javascript" charset="utf-8" src="../lib/store.js"></script>
+    <script type="text/javascript" charset="utf-8" src="../dist/store.js"></script>
     <script type="text/javascript" charset="utf-8" src="types/categories.js"></script>
     <script type="text/javascript" charset="utf-8" src="types/comments.js"></script>
     <script type="text/javascript" charset="utf-8" src="types/products.js"></script>
