Add basic style and intro.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,150 @@
-My Page
+<!DOCTYPE html>
+<html lang="en">
+  <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb#">
+    <meta charset="utf-8">
+    <title>JSON API Store &mdash; A lightweight JavaScript library for using JSON API in the browser.</title>
+    <meta property="og:title" content="JSON API Store &mdash; A lightweight JavaScript library for using JSON API in the browser.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="http://particlesystem.com/json-api-store">
+    <meta property="og:site_name" content="JSON API Store &mdash; A lightweight JavaScript library for using JSON API in the browser.">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style media="screen">
+      html, body, div, span, applet, object, iframe,
+      h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+      a, abbr, acronym, address, big, cite, code,
+      del, dfn, em, img, ins, kbd, q, s, samp,
+      small, strike, strong, sub, sup, tt, var,
+      b, u, i, center,
+      dl, dt, dd, ol, ul, li,
+      fieldset, form, label, legend,
+      table, caption, tbody, tfoot, thead, tr, th, td,
+      article, aside, canvas, details, embed,
+      figure, figcaption, footer, header, hgroup,
+      menu, nav, output, ruby, section, summary,
+      time, mark, audio, video {
+        margin: 0;
+        padding: 0;
+        border: 0;
+        font: inherit;
+        font-size: 100%;
+        vertical-align: baseline;
+      }
+      html {
+        line-height: 1;
+      }
+      ol, ul {
+        list-style: none;
+      }
+      table {
+        border-collapse: collapse;
+        border-spacing: 0;
+      }
+      caption, th, td {
+        text-align: left;
+        font-weight: normal;
+        vertical-align: middle;
+      }
+      q, blockquote {
+        quotes: none;
+      }
+      q:before, q:after, blockquote:before, blockquote:after {
+        content: "";
+        content: none;
+      }
+      a img {
+        border: none;
+      }
+      article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section, summary {
+        display: block;
+      }
+      body {
+        color: #333;
+        font-family: 'Open Sans', sans-serif;
+        font-size: 18px;
+        line-height: 1.375;
+      }
+      a {
+        color: #ff9900;
+        text-decoration: none;
+      }
+      a:hover {
+        background: #ff9900;
+        color: #fff;
+      }
+      .container {
+        max-width: 960px;
+        margin: 0 auto;
+      }
+      .header {
+        padding: 1.375em;
+        border-bottom: 1px solid #eee;
+      }
+      .header h1 {
+        font-weight: 600;
+        font-size: 200%;
+      }
+      .header > * + * {
+        margin-top: 0.6875em;
+      }
+      .main {
+        padding: 1.375em;
+      }
+      .main > * + * {
+        margin-top: 1.375em;
+      }
+      .norm h2 {
+        font-weight: 600;
+        font-size: 150%;
+      }
+      .norm > * + * {
+        margin-top: 0.6875em;
+      }
+      .norm li {
+        color: #ccc;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        width: 100%;
+      }
+      .norm li + li {
+        margin-top: 0.34375em;
+      }
+      .norm sub:before {
+        content: "\2014  ";
+      }
+      .fa {
+        color: #000;
+      }
+    </style>
+    <script type="text/javascript">
+      WebFontConfig = {
+        google: { families: [ 'Open+Sans:400,600:latin' ] }
+      };
+      (function() {
+        var wf = document.createElement('script');
+        wf.src = ('https:' == document.location.protocol ? 'https' : 'http') +
+          '://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
+        wf.type = 'text/javascript';
+        wf.async = 'true';
+        var s = document.getElementsByTagName('script')[0];
+        s.parentNode.insertBefore(wf, s);
+      })();
+    </script>
+    <link rel="stylesheet" href="css/font-awesome.min.css" media="all" title="Font Awesome Icons" charset="utf-8">
+  </head>
+  <body>
+    <div class="container">
+      <header class="header">
+        <h1>JSON API Store</h1>
+        <p>A lightweight JavaScript library for using JSON API in the browser.</p>
+      </header>
+      <main class="main norm">
+        <ul>
+          <li><a href="http://github.com/haydn/json-api-store"><i class="fa fa-fw fa-github"></i> GitHub Repo</a></li>
+          <!-- <li><a href="docs/0.2.0"><i class="fa fa-fw fa-book"></i> Documentation</a></li> -->
+          <!-- <li><a href="example"><i class="fa fa-fw fa-gears"></i> Example</a></li> -->
+        </ul>
+      </main>
+    </div>
+  </body>
+</html>
