Add lastest release version to dist directory.

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
       </nav>
       <main class="main">
         <div>
-          <a class="button" href="dist/store.v0.3.0.js" download="store.js">
+          <a class="button" href="dist/store.js" download="store.js">
             <i class="fa fa-cloud-download"></i>
             Download v0.3.0
           </a>
