--- a/example/index.html
+++ b/example/index.html
@@ -25,7 +25,7 @@
       <button data-action="destroy" data-type="categories" data-id="2">Delete Category</button>
     </div>
     <script type="text/javascript" charset="utf-8" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script type="text/javascript" charset="utf-8" src="../dist/store.js"></script>
+    <script type="text/javascript" charset="utf-8" src="../dist/store.dev.js"></script>
     <script type="text/javascript" charset="utf-8" src="types/category.js"></script>
     <script type="text/javascript" charset="utf-8" src="types/comment.js"></script>
     <script type="text/javascript" charset="utf-8" src="types/product.js"></script>
