Moved releases into a 'releases' dir.

--- a/index.html
+++ b/index.html
@@ -184,14 +184,14 @@
       </header>
       <nav class="nav">
         <a href="http://github.com/haydn/json-api-store"><i class="fa fa-fw fa-github"></i> GitHub Repo</a>
-        <a href="docs/v0.5.0/index.html"><i class="fa fa-fw fa-book"></i> Documentation</a>
+        <a href="docs/v0.4.1/index.html"><i class="fa fa-fw fa-book"></i> Documentation</a>
         <a href="example/index.html"><i class="fa fa-fw fa-gears"></i> Example</a>
       </nav>
       <main class="main">
         <div>
-          <a class="button" href="dist/store.js" download="store.js">
+          <a class="button" href="releases/v0.4.1/store.prod.js" download="store.prod.js">
             <i class="fa fa-cloud-download"></i>
-            Download v0.5.0
+            Download v0.4.1
           </a>
         </div>
         <pre class="code">npm i json-api-store</pre>
